cabal-version:       2.2

name:                brat
version:             0.1.0.0
maintainer:          craig.roy@cambridgequantum.com
build-type:          Custom
extra-source-files:  emacs/brat-mode.el, emacs/lsp-brat.el, proto/v1alpha/*.proto


custom-setup
  setup-depends:
    base < 5,
    Cabal,
    directory,
    proto-lens-setup

common haskell
  default-extensions:  DataKinds,
                       DeriveTraversable,
                       FlexibleInstances,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       ImplicitParams,
                       LambdaCase,
                       KindSignatures,
                       PatternSynonyms,
                       RecordWildCards,
                       StandaloneDeriving,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances 

common ghc-perf
  ghc-options:
    -j +RTS -A128M -RTS

common warning-flags
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -Wpartial-fields
    -Wincomplete-patterns
    -Wmonomorphism-restriction
    -Wmissing-fields

    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wno-unused-do-bind
    -Wno-missing-signatures
    -Wno-noncanonical-monoid-instances
    -Werror=unused-imports
    -Werror=unused-matches
    -Werror=missing-methods
    -Werror=unused-top-binds
    -Werror=unused-local-binds
    -Werror=redundant-constraints
    -Werror=orphans
    -Werror=overlapping-patterns

library
  import:              haskell, warning-flags
  default-language:    Haskell2010
  other-modules:       Brat.Checker.Quantity,
                       Brat.Dot,
                       Brat.Eval,
                       Brat.Lexer

  exposed-modules:     Brat.Checker,
                       Brat.Checker.Clauses,
                       Brat.Checker.Helpers,
                       Brat.Checker.Monad,
                       Brat.Checker.Types,
                       Brat.Compiler,
                       Brat.Compile.Circuit,
                       Brat.Compile.Simple,
                       Brat.Constructors,
                       Brat.Error,
                       Brat.FC,
                       Brat.Graph,
                       Brat.Load,
                       Brat.Naming,
                       Brat.Parser,
                       Brat.Search,
                       Brat.Elaborator,
                       Brat.Syntax.Abstractor,
                       Brat.Syntax.Common,
                       Brat.Syntax.Concrete,
                       Brat.Syntax.Core,
                       Brat.Syntax.Port,
                       Brat.Syntax.Raw,
                       Brat.Syntax.Simple,
                       Brat.Syntax.Skel,
                       Brat.Syntax.Value,
                       Brat.UserName,
                       Bwd,
                       Control.Monad.Freer,
                       Proto.V1alpha.Graph, Proto.V1alpha.Graph_Fields,
                       Proto.V1alpha.Signature, Proto.V1alpha.Signature_Fields,
                       Util

  autogen-modules:     Proto.V1alpha.Graph, Proto.V1alpha.Graph_Fields,
                       Proto.V1alpha.Signature, Proto.V1alpha.Signature_Fields

  build-depends:       base < 5,
                       bytestring,
                       megaparsec >= 9.0.0,
                       mtl,
                       HUnit,
                       containers,
                       proto-lens-runtime,
                       proto-lens,
                       microlens,
                       vector,
                       text,
                       deepseq,
                       array,
                       filepath,
                       directory,
                       utility-ht,
                       graphviz

executable brat
  import:              haskell, ghc-perf, warning-flags
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base < 5,
                       brat,
                       megaparsec >= 9.0.0,
                       filepath,
                       mtl,
                       containers,
                       proto-lens-runtime,
                       microlens,
                       text,
                       proto-lens,
                       optparse-applicative,
                       bytestring,
                       array,
                       directory,
                       utility-ht,
                       graphviz

  other-modules:       Brat.Checker,
                       Brat.Checker.Clauses,
                       Brat.Checker.Helpers,
                       Brat.Checker.Quantity,
                       Brat.Checker.Monad,
                       Brat.Checker.Types,
                       Brat.Compiler,
                       Brat.Compile.Circuit,
                       Brat.Compile.Simple,
                       Brat.Constructors,
                       Brat.Dot,
                       Brat.Error,
                       Brat.Eval,
                       Brat.FC,
                       Brat.Graph,
                       Brat.Lexer,
                       Brat.Load,
                       Brat.Naming,
                       Brat.Parser,
                       Brat.Search,
                       Brat.Elaborator,
                       Brat.Syntax.Abstractor,
                       Brat.Syntax.Common,
                       Brat.Syntax.Concrete,
                       Brat.Syntax.Core,
                       Brat.Syntax.Port,
                       Brat.Syntax.Raw,
                       Brat.Syntax.Simple,
                       Brat.Syntax.Skel
                       Brat.Syntax.Value,
                       Brat.UserName,
                       Bwd,
                       Control.Monad.Freer,
                       Proto.V1alpha.Graph,
                       Proto.V1alpha.Graph_Fields,
                       Util


executable lsp-brat
  import:              ghc-perf, warning-flags
  default-language:    Haskell2010
  main-is:             Driver.hs
  other-modules:       Brat.LSP.Find, Brat.LSP.Holes, Brat.LSP.State
  hs-source-dirs:      lsp
  build-depends:       base <5, brat, lsp, lsp-types, text, lens, hslogger, rope-utf16-splay, mtl, filepath
  default-extensions:  RecordWildCards

test-suite tests
  import:              ghc-perf, haskell
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Abstractor,
                       Test.Checking,
                       Test.Circuit.Common,
                       Test.Circuit.Gen,
                       Test.Circuit.Graph,
                       Test.Compile.RemoveNode,
                       Test.Constructors,
                       Test.Elaboration,
                       Test.Failure,
                       Test.Parsing,
                       Test.Naming,
                       Test.Search,
                       Test.Substitution,
                       Test.Syntax.Let

  build-depends:       base <5,
                       brat,
                       tasty,
                       tasty-hunit,
                       tasty-expected-failure,
                       tasty-quickcheck,
                       tasty-silver,
                       mtl,
                       containers,
                       filepath,
                       silently,
                       text,
                       QuickCheck,
                       utility-ht,
                       partial-order
