cabal-version:       2.2

name:                brat
version:             0.1.0.0
maintainer:          craig.roy@cambridgequantum.com
build-type:          Custom
extra-source-files:  emacs/brat-mode.el, emacs/lsp-brat.el


custom-setup
  setup-depends:
    base < 5,
    Cabal,
    directory,

common haskell
  default-extensions:  DataKinds,
                       GADTs,
                       ImplicitParams,
                       LambdaCase,
                       PatternSynonyms,
                       RecordWildCards,
                       TypeFamilies

common ghc-perf
  ghc-options:
    -j +RTS -A128M -RTS

common warning-flags
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -Wpartial-fields
    -Wincomplete-patterns
    -Wmonomorphism-restriction
    -Wmissing-fields

    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wno-unused-do-bind
    -Wno-missing-signatures
    -Wno-noncanonical-monoid-instances
    -Werror=unused-imports
    -Werror=unused-matches
    -Werror=missing-methods
    -Werror=unused-top-binds
    -Werror=unused-local-binds
    -Werror=redundant-constraints
    -Werror=orphans
    -Werror=overlapping-patterns

library
  import:              haskell, warning-flags
  default-language:    GHC2021
  other-modules:       Brat.Lexer.Flat,
                       Brat.Lexer.Token

  exposed-modules:     Brat.Checker.Quantity,
                       Brat.Dot,
                       Brat.Eval,
                       Brat.Lexer
                       Brat.Checker.Clauses,
                       Brat.Checker.Helpers,
                       Brat.Checker.Helpers.Nodes,
                       Brat.Checker.Monad,
                       Brat.Checker.Types,
                       Brat.Compile.Hugr,
                       Brat.Constructors,
                       Brat.Constructors.Patterns,
                       Brat.Error,
                       Brat.Graph,
                       Brat.Load,
                       Brat.Parser,
                       Brat.Search,
                       Brat.Elaborator,
                       Brat.Syntax.Abstractor,
                       Brat.Syntax.Concrete,
                       Brat.Syntax.FuncDecl,
                       Brat.Syntax.Port,
                       Brat.Syntax.Simple,
                       Brat.UserName,
                       Bwd,
                       Control.Monad.Freer,
                       Data.Hugr.Ops,
                       Data.Hugr.Types,
                       Hasochism,
                       Util

                       -- For the `brat` exe
  exposed-modules:     Brat.Compiler,
                       -- For LSP
                       Brat.Checker,
                       Brat.Syntax.Core,
                       Brat.Syntax.Common,
                       Brat.FC,
                       Brat.Naming,
                       Brat.Syntax.Raw,
                       Brat.Syntax.Value,
                       Brat.Unelaborator


  build-depends:       base < 5,
                       megaparsec >= 9.0.0,
                       mtl,
                       HUnit,
                       containers,
                       vector,
                       text,
                       deepseq,
                       array,
                       filepath,
                       directory,
                       utility-ht,
                       graphviz,
                       aeson,
                       bytestring,
                       transformers

executable brat
  import:              haskell, ghc-perf, warning-flags
  default-language:    GHC2021
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base < 5,
                       brat,
                       megaparsec >= 9.0.0,
                       filepath,
                       mtl,
                       containers,
                       text,
                       optparse-applicative,
                       bytestring,
                       array,
                       directory,
                       utility-ht,
                       graphviz

executable lsp-brat
  import:              ghc-perf, warning-flags
  default-language:    GHC2021
  main-is:             Driver.hs
  other-modules:       Brat.LSP.Find, Brat.LSP.Holes, Brat.LSP.State
  hs-source-dirs:      lsp
  build-depends:       base <5, brat, lsp, lsp-types, text, lens, hslogger, text-rope, mtl, filepath
  default-extensions:  RecordWildCards

test-suite tests
  import:              ghc-perf, haskell
  type:                exitcode-stdio-1.0
  default-language:    GHC2021
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Abstractor,
                       Test.Checking,
                       Test.Circuit.Common,
                       Test.Circuit.Graph,
                       Test.Compile.Hugr,
                       Test.Constructors,
                       Test.Elaboration,
                       Test.Failure,
                       Test.Libs,
                       Test.Parsing,
                       Test.Naming,
                       Test.Search,
                       Test.Substitution,
                       Test.Syntax.Let,
                       Test.TypeArith,
                       Test.Util

  build-depends:       base <5,
                       brat,
                       tasty,
                       tasty-hunit,
                       tasty-expected-failure,
                       tasty-quickcheck,
                       tasty-silver,
                       mtl,
                       containers,
                       filepath,
                       silently,
                       text,
                       QuickCheck,
                       utility-ht,
                       partial-order,
                       bytestring,
                       directory
