[package]
name = "brat_extension"
version = "0.5.0"
edition = "2021"

[lib]
name = "brat_extension"
bench = false
path = "src/lib.rs"

[dependencies]
hugr = "0.10.0"
serde = "1.0"
serde_json = "1.0.97"

typetag = "0.2.7"
smol_str = { version = "0.2.0", features = ["serde"] }
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
enum-iterator = "2.0.1"
